--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ jobs:
           - ~/.npm
 
       before_install:
-        - ./tcheck.sh || travis_terminate 0
+        - .travis/affects.sh ^web3.js/ || travis_terminate 0
         - wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
         - sudo apt-add-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main"
         - sudo apt-get update
