--- a/ledger-tool/Cargo.toml
+++ b/ledger-tool/Cargo.toml
@@ -33,6 +33,8 @@ bzip2 = "0.3.3"
 enum-iterator = "0.6.0"
 serde = "1.0.112"
 serde_derive = "1.0.103"
+rayon = "1.3.0"
+solana-measure = { path = "../measure", version = "1.1.20" }
 
 [dev-dependencies]
 assert_cmd = "1.0"
